Add in some stuff about what I've done

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+Edin's Website
+
+<a href="docs/edin_cv.pdf">My Curriculum Vitae</a>
+
+<h1>What I've done:</h1>
+<ul>
+    <li><a href="https://github.com/edinosma/misc-python-code">misc-python-scripts</a> Collection of miscellaneous Python scripts for my work in a chemistry lab.</li>
+    <li><a href="https://github.com/edinosma/troika-toolbox">troika-toolbox</a>: MATLAB code designed to manipulate and create graphs from Troika trajectories.</li>
+    <li><a href="https://github.com/edinosma/msdanalyzer-tools">msdanalyzer-tools</a>: MATLAB code made for msdanalyzer.</li>
+    <li><a href="https://github.com/edintomato2/Beret">Beret</a>: A level editor and viewer for the puzzle game FEZ.</li>
+</ul>
