Add header and line break

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-Edin's Website
-
+<h1>Edin's Website</h1>
+<br>
 <a href="docs/edin_cv.pdf">My Curriculum Vitae</a>
 
-<h1>What I've done:</h1>
+<h2>What I've done:</h2>
 <ul>
     <li><a href="https://github.com/edinosma/misc-python-code">misc-python-scripts</a> Collection of miscellaneous Python scripts for my work in a chemistry lab.</li>
     <li><a href="https://github.com/edinosma/troika-toolbox">troika-toolbox</a>: MATLAB code designed to manipulate and create graphs from Troika trajectories.</li>
