--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2>What I've done:</h2>
 <ul>
-    <li><a href="https://github.com/edinosma/misc-python-code">misc-python-scripts</a> Collection of miscellaneous Python scripts for my work in a chemistry lab.</li>
+    <li><a href="https://github.com/edinosma/misc-python-code">misc-python-code</a> Collection of miscellaneous Python scripts for my work in a chemistry lab.</li>
     <li><a href="https://github.com/edinosma/troika-toolbox">troika-toolbox</a>: MATLAB code designed to manipulate and create graphs from Troika trajectories.</li>
     <li><a href="https://github.com/edinosma/msdanalyzer-tools">msdanalyzer-tools</a>: MATLAB code made for msdanalyzer.</li>
     <li><a href="https://github.com/edintomato2/Beret">Beret</a>: A level editor and viewer for the puzzle game FEZ.</li>
