--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>Edin's Website</h1>
 <br>
-<a href="docs/edin_cv.pdf">My Curriculum Vitae</a>
+<a href="edin_cv.pdf">My Curriculum Vitae</a>
 
 <h2>What I've done:</h2>
 <ul>
